fixed button spacing in config under hogfather

--- a/assets/mikio.less
+++ b/assets/mikio.less
@@ -1126,6 +1126,12 @@ code, pre {
         width: 100%;
     }
 
+    p {
+        button + button {
+            margin-left: .5rem;
+        }
+    }
+
     div.ui-admin {
         ul.admin_tasks, ul.admin_plugins {
             float: none;
